# oppy-rover

./: README.md
rover_arm/: CMakeLists.txt  package.xml
rover_arm/launch/: arm_interactive.launch  gripper_interactive.launch
rover_arm/src/: arm_bridge.py  arm_homing_supervisor.py  arm_interactive_marker.py  arm_trajectory_executor.py  gripper_interactive_marker.py
rover_base/: CMakeLists.txt  package.xml
rover_base/src/: base_bridge.py
rover_bringup/: CMakeLists.txt  package.xml
rover_bringup/launch/: pc_master.launch  real_mode.launch  rover.launch  rover_pi.launch  rviz_rover.launch  sim_mode.launch
rover_bringup/rviz/: rover_full.rviz
rover_description/: CMakeLists.txt  package.xml
rover_description/config/: controllers.yaml
rover_description/launch/: display.launch  displayr.launch  drive_kinematics.launch  ros_control.launch
rover_description/meshes/: mesh_0.stl  mesh_10.stl  mesh_11.stl  mesh_12.stl  mesh_13.stl  mesh_14.stl  mesh_15.stl  mesh_16.stl  mesh_17.stl  mesh_18.stl  mesh_19.stl  mesh_2.stl  mesh_20.stl  mesh_3.stl  mesh_30.stl  mesh_31.stl  mesh_32.stl  mesh_33.stl  mesh_34.stl  mesh_35.stl  mesh_36.stl  mesh_37.stl  mesh_38.stl  mesh_39.stl  mesh_40.stl  mesh_5.stl  mesh_6.stl  mesh_61.stl  mesh_62.stl  mesh_63.stl  mesh_64.stl  mesh_65.stl  mesh_66.stl  mesh_67.stl  mesh_7.stl  mesh_70.stl  mesh_71.stl  mesh_8.stl  mesh_9.stl
rover_description/src/: six_wheel_kinematics.py
rover_description/urdf/: macros.xacro  rover.urdf.xacro
rover_firmware/firmware_arm/: firmware_arm.ino
rover_firmware/firmware_drive/: firmware_drive.ino
rover_firmware/firmware_drive_bts7960s/: README.md  firmware_drive_bts7960s.ino
rover_mission_control/: CMakeLists.txt  package.xml
rover_mission_control/launch/: mission_control.launch
rover_mission_control/src/: mission_control.py
rover_msgs/: CMakeLists.txt  package.xml
rover_msgs/msg/: ArmJointStates.msg  HazardParams.msg  WheelStates.msg
rover_nav/: CMakeLists.txt  package.xml
rover_nav/launch/: hazard_monitor.launch  move_base.launch
rover_nav/src/: depth_hazard_monitor.py  hazard_visualizer.py  odom_node.py
rover_sensors/launch/: gps.launch  kinect.launch
rover_simulation/: CMakeLists.txt  package.xml
rover_simulation/config/: controllers.yaml
rover_simulation/launch/: simulation.launch
rover_simulation/urdf/: rover_gazebo.xacro
rover_teleop/launch/: joy_teleop.launch
