<?xml version="1.0"?>
<package format="2">
  <name>rover_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and RViz configs for rover.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_base</exec_depend>
  <exec_depend>rover_arm</exec_depend>
  <exec_depend>rover_nav</exec_depend>
</package>
